02- k8s-resources-yaml/c1-01-myapp1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #Dictionary
  name: myapp1-deployment
spec:
  # Dictionary
  replicas: 2
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      # Dictionary
      name: myapp1-pod
      labels:
        # Dictionary
        app: myapp1 # Key value pairs
    spec:
      containers:
      # List
      - name: myapp1-container
        image: aslam24/nginx-web-myapp1:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "20Mi" # 128 MebiByte is equal to 135 Megabyte (MB)
            cpu: "20m" # `m` means milliCPU
          limits:
            memory: "30Mi"
            cpu: "30m" # 1000m is equal to 1 VCPU core
